# new_gateway

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  SETUP.md  alembic.ini  aws-deploy.sh  backup_users.sql  conftest.py  docker-compose.yml  mypy.ini  nginx.conf  prometheus.yml  proxy.Dockerfile  pyproject.toml  pytest.ini  rebuild_and_test.sh  redis.conf  setup_new_gateway.sh
.cursor/rules/: consistent_use.mdc  constants.mdc  implementation_logic.mdc  pattern_compliance.mdc  rule-1.mdc  rule_2.mdc  rule_3.mdc
.github/workflows/: cicd.yml
Protexis_Command/: __init__.py  main.py
Protexis_Command/DOCS/AUTH/: README.md
Protexis_Command/DOCS/ENVIRONMENT/: README.md
Protexis_Command/DOCS/ORBCOMM_DOCS/: OGWS-1.txt  swagger.json
Protexis_Command/api/: __init__.py  ogx_main.py
Protexis_Command/api/config/: __init__.py  ogx_endpoints.py
Protexis_Command/api/internal/: __init__.py  app_init.py  protexis_main.py
Protexis_Command/api/middleware/: __init__.py
Protexis_Command/api/models/: auth.py  fields.py  messages.py
Protexis_Command/api/routes/: __init__.py  updates.py
Protexis_Command/api/services/: __init__.py  ogx_client.py
Protexis_Command/api/validation/: __init__.py
Protexis_Command/api_internal/: app_init.py  protexis_main.py
Protexis_Command/api_internal/clients/: base.py  factory.py
Protexis_Command/api_internal/middleware/: protexis_auth.py
Protexis_Command/api_internal/routes/: messages.py
Protexis_Command/api_internal/security/: oauth2.py
Protexis_Command/api_ogx/: __init__.py  ogx_main.py
Protexis_Command/api_ogx/auth/: manager.py
Protexis_Command/api_ogx/config/: __init__.py  http_error_codes.py  ogx_endpoints.py
Protexis_Command/api_ogx/constants/: __init__.py  ogx_auth.py  ogx_endpoints.py  ogx_error_codes.py  ogx_field_types.py  ogx_limits.py  ogx_message_states.py  ogx_transport_types.py
Protexis_Command/api_ogx/middleware/: ogx_auth.py  rate_limit.py  validation.py
Protexis_Command/api_ogx/models/: __init__.py  fields.py  info.py  messages.py  ogx_fields.py  terminal_updates.py
Protexis_Command/api_ogx/ogx_api_models/: __init__.py  ogx_fields.py
Protexis_Command/api_ogx/protocol/: __init__.py  ogx_base_validator.py  ogx_network_validator.py  ogx_size_validator.py  ogx_transport_validator.py
Protexis_Command/api_ogx/routes/: __init__.py  api.py  auth.py  messages.py  terminal.py  updates.py
Protexis_Command/api_ogx/services/: __init__.py  ogx_client.py  ogx_message_processor.py  ogx_message_queue.py  ogx_message_receiver.py  ogx_message_sender.py  ogx_message_submission.py  ogx_message_worker.py  ogx_network_monitor.py  ogx_protocol_handler.py  ogx_session_handler.py  ogx_state_store.py  ogx_transport_optimizer.py
Protexis_Command/api_ogx/validation/: __init__.py
Protexis_Command/api_protexis/: __init__.py  app_init.py  protexis_main.py
Protexis_Command/api_protexis/clients/: __init__.py  base.py  factory.py
Protexis_Command/api_protexis/middleware/: protexis_auth.py
Protexis_Command/api_protexis/routes/: messages.py
Protexis_Command/api_protexis/schemas/: user.py
Protexis_Command/api_protexis/security/: jwt.py  oauth2.py  password.py  token_utils.py
Protexis_Command/core/: __init__.py  app_settings.py
Protexis_Command/core/logging/: examples.py  (+2 more)
Protexis_Command/infrastructure/: redis.py
Protexis_Command/internal/: protexis_main.py
Protexis_Command/protexis_ui/: README.md  UI.Dockerfile  jest.setup.js  next.config.js  package.json  tailwind.config.ts
coverage_reports/: class_index.html  function_index.html  index.html  status.json  z_05406219cd37589f___init___py.html  z_05406219cd37589f_dependencies_py.html  z_05406219cd37589f_session_py.html  z_092175ae2098ec08___init___py.html  z_092175ae2098ec08_field_validator_py.html  z_10d3c1ea3c45ea57___init___py.html  z_10d3c1ea3c45ea57_batch_py.html  z_10d3c1ea3c45ea57_file_py.html  z_10d3c1ea3c45ea57_formatter_factory_py.html  z_10d3c1ea3c45ea57_metrics_py.html  z_10d3c1ea3c45ea57_stream_py.html  z_10d3c1ea3c45ea57_syslog_py.html  z_12576e5ea0adc52e___init___py.html  z_15d6541120017574___init___py.html  z_15d6541120017574_devices_py.html  z_15d6541120017574_messages_py.html  z_15d6541120017574_status_py.html  z_17132dad1f45b7e6___init___py.html  z_17132dad1f45b7e6_ogx_auth_py.html  z_17132dad1f45b7e6_rate_limit_py.html  z_17132dad1f45b7e6_validation_py.html  z_19df878f8f2bb714___init___py.html  z_1fbfc72779e0169a___init___py.html  z_1fbfc72779e0169a_ogx_message_processor_py.html  z_1fbfc72779e0169a_ogx_message_queue_py.html  z_1fbfc72779e0169a_ogx_message_receiver_py.html  z_1fbfc72779e0169a_ogx_message_sender_py.html  z_1fbfc72779e0169a_ogx_message_submission_py.html  z_1fbfc72779e0169a_ogx_message_worker_py.html  z_20ece65ed9d3fb8e___init___py.html  z_20ece65ed9d3fb8e_http_error_codes_py.html  z_20ece65ed9d3fb8e_ogx_auth_py.html  z_20ece65ed9d3fb8e_ogx_endpoints_py.html  z_21b304e787c1391f___init___py.html  z_21b304e787c1391f_examples_py.html  z_21b304e787c1391f_formatters_py.html  (+119 more)
src/: __init__.py
src/DOCS/: N210 IGWS 2 User Guide copy.txt  OGWS-1.txt
src/ORBCOMM_DOCS/: OGWS-1.txt
src/api/: __init__.py  main.py
src/core/: __init__.py  app_settings.py  config.py  message_processor.py  message_queue.py  message_receiver.py  message_sender.py  message_worker.py  security.py
src/infrastructure/: __init__.py  redis.py
src/metrics/: __init__.py  exceptions.py
src/ui/: .env.example  README.md  UI.Dockerfile  UI.Dockerfile.dev  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js
tests/: conftest.py  test_ogx_protocol.py  test_setup.md
tests/core/: conftest.py  test_message_queue.py
tests/e2e/: README.md  conftest.py  pytest.ini  setup_e2e.sh
tests/integration/: README.md  conftest.py  helpers.py  setup_test_env.py  test_redis_connection.py  test_setup.md
tests/rules/: __init__.py  cursor_rules_investigation.md  cursor_rules_investigation_session.md  rule_enforcement_failures.md  test_violations.py
ui/: ui.Dockerfile
(+494 files in other folders)
