[tool.poetry]
name = "new_gateway"
version = "0.1.0"
description = "orbcomm_gateway"
authors = ["Aaron Porter <aaron.porter12@yahoo.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11.6"
fastapi = ">=0.100.0"
uvicorn = ">=0.22.0"
sqlalchemy = ">=2.0.0"
alembic = ">=1.11.0"
redis = ">=4.5.0"
boto3 = ">=1.26.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.6"
aiohttp = ">=3.8.0"
asyncio = ">=3.4.3"
python-dotenv = ">=1.0.0"
lupa = ">=2.0"  # For Lua integration
prometheus-client = ">=0.17.0"
httpx = ">=0.24.0"  # For HTTP client
types-python-jose = ">=3.3.0"  # Type stubs for python-jose
types-redis = ">=4.5.0"  # Type stubs for redis
types-pyjwt = ">=1.7.1"  # Type stubs for PyJWT
PyJWT = ">=2.0.0"  # JWT handling

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.0"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.3.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.3.0"
pre-commit = ">=3.3.0"
pytest-mock = ">=3.11.0"
pytest-env = ">=0.8.0"
locust = ">=2.15.0"  # For performance testing

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = ["tests/*"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jwt.*", "redis.*", "pydantic.*", "fastapi.*", "sqlalchemy.*"]
ignore_missing_imports = true

[tool.pylint]
init-hook='import sys; sys.path.append("src")'
ignore = ["CVS"]
ignore-patterns = ["^\\.#"]
persistent = "yes"
load-plugins = []
jobs = 0
unsafe-load-any-extension = "no"
extension-pkg-whitelist = []
suggestion-mode = "yes"
py-version = "3.11"
fail-under = 10.0
evaluation = "10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"
disable = ["W0621"]  # Disable redefined-outer-name warning

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.bandit]
exclude_dirs = ["src/tests", "scripts"]
targets = ["protocols"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
