[tool.poetry]
name = "new_gateway"
version = "0.1.0"
description = "orbcomm_gateway"
authors = ["Aaron Porter <aaron.porter12@yahoo.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.6"
common = { git = "https://github.com/aporter432/common.git", branch = "main" }

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
